--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
+		"bits-ui": "^1.3.4",
+		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -30,12 +31,16 @@
 		"prisma": "^6.4.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^0.3.1",
+		"tailwindcss": "^4.0.8",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.4.1"
+		"@prisma/client": "^6.4.1",
+		"@tailwindcss/vite": "^4.0.8"
 	}
 }
