--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"bits-ui": "^1.3.4",
+		"@types/node": "^22.13.5",
+		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
+		"lucide-svelte": "^0.476.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -44,6 +46,7 @@
 		"@tailwindcss/vite": "^4.0.8",
 		"d3-array": "^3.2.4",
 		"d3-scale": "^4.0.2",
-		"layerchart": "^1.0.0"
+		"layerchart": "^1.0.0",
+		"csv-parse": "^5.6.0"
 	}
 }
