--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
+		"lucide-svelte": "^0.476.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -41,6 +42,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.4.1",
-		"@tailwindcss/vite": "^4.0.8"
+		"@tailwindcss/vite": "^4.0.8",
+		"@tanstack/table-core": "^8.21.2"
 	}
 }
