--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
 		"@prisma/client": "^6.4.1",
 		"@tailwindcss/vite": "^4.0.8",
 		"@tanstack/table-core": "^8.21.2",
+		"csv-parse": "^5.6.0",
 		"d3-array": "^3.2.4",
 		"d3-scale": "^4.0.2",
 		"d3-scale-chromatic": "^3.1.0",
-		"layerchart": "^1.0.0",
-		"csv-parse": "^5.6.0"
+		"layerchart": "^1.0.0"
 	}
 }
