--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
+	"prisma": {
+  		"seed": "tsx prisma/seed.ts"
+	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
@@ -39,6 +42,7 @@
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.0.8",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.19.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
