--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
+		"formsnap": "^2.0.0",
 		"globals": "^15.14.0",
 		"lucide-svelte": "^0.476.0",
 		"prettier": "^3.4.2",
@@ -33,22 +34,24 @@
 		"prisma": "^6.4.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.23.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.0.8",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0"
+		"vite": "^6.0.0",
+		"zod": "^3.24.2"
 	},
 	"dependencies": {
 		"@prisma/client": "^6.4.1",
 		"@tailwindcss/vite": "^4.0.8",
 		"@tanstack/table-core": "^8.21.2",
+		"csv-parse": "^5.6.0",
 		"d3-array": "^3.2.4",
 		"d3-scale": "^4.0.2",
 		"d3-scale-chromatic": "^3.1.0",
-		"layerchart": "^1.0.0",
-		"csv-parse": "^5.6.0"
+		"layerchart": "^1.0.0"
 	}
 }
