--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"d3-scale": "^4.0.2",
 		"d3-scale-chromatic": "^3.1.0",
 		"layerchart": "^1.0.0",
-		"moment": "^2.30.1"
+		"moment": "^2.30.1",
+		"spin-wheel": "^5.0.2"
 	}
 }
